Assembly.GetManifestResourceNames can't be executed on dynamically loaded Assembly but must be invoked in a class from the same Assembly

--- a/HelloPlugin/HelloPlugin.csproj
+++ b/HelloPlugin/HelloPlugin.csproj
@@ -80,6 +80,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HelloController.cs" />
+    <Compile Include="HelloPlugin.cs" />
     <Compile Include="HelloPluginInstaller.cs" />
     <Compile Include="HelloService.cs" />
     <Compile Include="IHelloService.cs" />
